--- a/libs/default.css
+++ b/libs/default.css
@@ -53,16 +53,13 @@ a, a > code {
 
 /* Two-column layout */
 .left-column {
-  color: #777;
-  width: 20%;
+  width: 30%;
   height: 92%;
   float: left;
-}
-.left-column h2:last-of-type, .left-column h3:last-child {
-  color: #000;
+  padding-top: 1em;
 }
 .right-column {
-  width: 75%;
+  width: 65%;
   float: right;
   padding-top: 1em;
 }
